--- a/boilerplate/package.json
+++ b/boilerplate/package.json
@@ -1,10 +1,10 @@
 {
   "name": "boilerplate",
   "version": "1.0.0",
-  "description": "trial ",
-  "main": "input.js",
+  "description": "",
+  "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "babel src/index.js--out-file public/scripts/bundle.js --presets env --watch"
   },
   "author": "",
   "license": "ISC",
