--- a/boilerplate/package.json
+++ b/boilerplate/package.json
@@ -4,11 +4,14 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "babel src/index.js--out-file public/scripts/bundle.js --presets env --watch"
+    "build": "babel src/index.js --out-file public/scripts/bundle.js --presets env --watch",
+    "serve": "live-server public/"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "babel-preset-env": "^1.6.1"
+    "babel-preset-env": "^1.6.1",
+    "babel-cli": "6.26.0",
+    "live-server": "1.2.0"
   }
 }
