--- a/boilerplate/package.json
+++ b/boilerplate/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "build": "babel src/index.js --out-file public/scripts/bundle.js --presets env --watch",
+    "webpack": "webpack",
     "serve": "live-server public/"
   },
   "author": "",
@@ -12,6 +13,8 @@
   "dependencies": {
     "babel-preset-env": "^1.6.1",
     "babel-cli": "6.26.0",
-    "live-server": "1.2.0"
+    "live-server": "1.2.0",
+    "webpack": "4.5.0",
+    "webpack-cli": "2.0.14"
   }
 }
