--- a/boilerplate/package.json
+++ b/boilerplate/package.json
@@ -3,8 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "serve": "live-server public/",
-    "build": "webpack"
+    "dev-server": "webpack-dev-server"
   },
   "author": "",
   "license": "ISC",
@@ -14,7 +13,8 @@
     "babel-preset-env": "^1.6.1",
     "live-server": "^1.2.1",
     "webpack": "4.5.0",
-    "webpack-cli": "2.0.14"
+    "webpack-cli": "2.0.14",
+    "webpack-dev-server": "^3.1.3"
   },
   "description": ""
 }
