--- a/boilerplate/package.json
+++ b/boilerplate/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "dev-server": "webpack-dev-server"
+    "dev-server": "webpack-dev-server --mode development",
+    "build": "webpack-dev-server --mode production"
   },
   "author": "",
   "license": "ISC",
